--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,12 @@ body {
 }
 
 h1 {
-  color: beige;
+  color: antiquewhite;
 }
 
 p {
   margin-top: 80px;
+  justify-content: center;
 }
 .inputContainer {
   margin-top: 80px;
@@ -39,16 +40,28 @@ button:hover {
 input {
   width: 300px;
 }
+#addBtn {
+  width: 120px;
+}
+
 li {
   display: flex;
   justify-content: space-evenly;
   text-align: center;
   margin-right: 200px;
   margin-top: 50px;
+  background-color: rgb(89, 89, 77);
+  opacity: 0.6;
+  color: antiquewhite;
+  border-radius: 20px;
+  padding: 1rem;
 }
 .textLabel {
   margin-right: 200px;
+  margin-top: 6px;
 }
-.checkBtn {
-  margin-left: 10px;
+
+.checkBtn .trashBtn {
+  display: flex;
+  justify-content: flex-end;
 }
