--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+:root {
+  --red-color: rgb(140, 46, 46);
+  --white-color: rgb(213, 208, 208);
+}
 body {
   display: inline-block;
   margin-left: 40%;
@@ -13,6 +17,14 @@ body {
   font-size: x-large;
 }
 
+.main {
+  animation: slideDown;
+  animation-delay: 0.4;
+  animation-duration: 2s;
+}
+.main ::before {
+  display: none;
+}
 h1 {
   color: antiquewhite;
 }
@@ -21,9 +33,23 @@ p {
   margin-top: 80px;
   justify-content: center;
 }
+#task-done {
+  animation-delay: 2s;
+}
 .inputContainer {
   margin-top: 80px;
 }
+#wrongMessageText {
+  margin-top: -3rem;
+  margin-left: 5rem;
+}
+
+.wrongMessage {
+  animation: blink;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
 input,
 button {
   border: none;
@@ -49,12 +75,14 @@ li {
   justify-content: space-evenly;
   text-align: center;
   margin-right: 200px;
-  margin-top: 50px;
+  margin-top: 20px;
   background-color: rgb(89, 89, 77);
   opacity: 0.6;
   color: antiquewhite;
   border-radius: 20px;
   padding: 1rem;
+  animation: SlideUpTask;
+  animation-duration: 1s;
 }
 .textLabel {
   margin-right: 200px;
@@ -64,4 +92,44 @@ li {
 .checkBtn .trashBtn {
   display: flex;
   justify-content: flex-end;
+}
+
+@keyframes slideDown {
+  0% {
+    transform: translateY(-500px);
+  }
+  80% {
+    transform: translateY(20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes SlideUpTask {
+  0% {
+    transform: translateY(70px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes blink {
+  0% {
+    color: var(--white-color);
+  }
+  20% {
+    color: var(--red-color);
+  }
+  40% {
+    color: var(--white-color);
+  }
+  60% {
+    color: var(--red-color);
+  }
+  80% {
+    color: var(--white-color);
+  }
+  100% {
+    color: var(--red-color);
+  }
 }
