--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   --white-color: rgb(213, 208, 208);
 }
 body {
-  display: inline-block;
+  display: flex;
   margin-left: 40%;
   margin-top: 10%;
   color: rgb(35, 34, 34);
@@ -93,6 +93,20 @@ li {
   justify-content: flex-end;
   align-items: center;
 }
+.checkBtn:active,
+.trashBtn:active {
+  transform: scale(0.9);
+}
+
+#svampbob {
+  width: 350px;
+  height: auto;
+  margin: -370px;
+}
+.bild {
+  animation: bild;
+  animation-duration: 1s;
+}
 
 @keyframes slideDown {
   0% {
@@ -135,5 +149,16 @@ li {
   }
   100% {
     opacity: 1;
+  }
+}
+@keyframes bild {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  50% {
+    transform: rotateZ(20deg);
+  }
+  100% {
+    transform: rotateZ(0deg);
   }
 }
